[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Dotfiles, templates and an installer"
authors = ["Jonas Ehrlich <jonas.ehrlich@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jonasehrlich/dotfiles"
repository = "https://github.com/jonasehrlich/dotfiles"
documentation = "https://github.com/jonasehrlich/dotfiles"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"
isort = "^5.13.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["plantuml_sequence", "test"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120
extend-include = ["install"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle error rules
    "F",   # pycodestyle warning rules
    "B",   # flake8-bugbear rules
    "S",   # flake8-bandit rules
    "PTH", # flake8-use-pathlib
    "PLC", # pylint convention rules
    "PLR", # pylint refactor rules
    "PLE", # pylint error rules
    "PLW", # pylint warning rules
    "C90", # mccabe complexity rules
]

[tool.ruff.lint.per-file-ignores]
# Disable assert-statement and magic-value-comparison rules for tests
"test_*.py" = ["S101", "PLR2004"]
# Disable unused-import rule for __init__.py files
"__init__*.py" = ["F401"]
